Fix some layout issues

--- a/wp-content/themes/markomilo/src/scss/animations/_title.scss
+++ b/wp-content/themes/markomilo/src/scss/animations/_title.scss
@@ -7,7 +7,7 @@
     top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 550px;
+    height: 500px;
     width: auto;
 
     &.visible {
