--- a/wp-content/themes/markomilo/src/scss/components/_curtain.scss
+++ b/wp-content/themes/markomilo/src/scss/components/_curtain.scss
@@ -10,4 +10,8 @@
         opacity: 1;
         z-index: 99;
     }
+
+    &--once {
+        transform: unset;
+    }
 }
