--- a/wp-content/themes/markomilo/src/scss/layouts/_main.scss
+++ b/wp-content/themes/markomilo/src/scss/layouts/_main.scss
@@ -16,6 +16,10 @@
         }
     }
 
+    &-navigation {
+        visibility: hidden;
+    }
+
     &-content {
         display: flex;
         flex-direction: column;
