--- a/wp-content/themes/markomilo/src/scss/layouts/_poem.scss
+++ b/wp-content/themes/markomilo/src/scss/layouts/_poem.scss
@@ -7,6 +7,12 @@
         }
     }
 
+    .post-content {
+        max-width: 645px;
+        margin: 0 auto;
+        width: 100%;
+    }
+
     img {
         max-width: 345px;
         width: 100%;
